test/fail/type-parameters.grace
type Name = type {}

Name(object {})
